 * LDAP Authentication bypass in Web Admin login (Reported by Matthew Daley, #1293)
 * LDAP Injection in Web Admin login (Reported by Matthew Daley, #1293)
 * Shared session state between Captive Portal and Web Admin (Reported by Matthew Daley, #1294)
 * Command injection in guest handling in the Captive Portal and Web Admin (Reported by Matthew Daley, #1295)

New Hardware Support
 * Trapeze Wireless Controllers

Enchancements
 * Wireless deauthentication in bridge mode for DLink DWS, HP MSM and Motorola controllers
 * Better French Translation
 * Improved validation when creating/importing multiple guest accounts.
 * Configuration files ownership validation on start-up and in `pfcmd checkup`
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)

Bug Fixes
 * Allow incoming DNS on management interface to track users IPs in production VLANs
 * Guest access by SMS confirmation now properly record user's firstname and lastname (#1308)
 * Cisco access point (AP) configuration mistake in documentation
 * Dashboard not printing the SQL stats when MySQL is not local (#1289)
 * Doubled allow subnets in captive-portal-common (#1242)
 * Unreliable encoding behavior messes up with translations (#1287)
 * Nodes are not unregistered on unregdate unless an expire mode is activated (#1298)
 * Add trigger or cascade to delete node_useragent when deleting a node (#1285)
 * Removed an error when validating multiple guest pre-registration

--------------------------------------------------------------------------------
Version 3.0.1 released on 2011-09-23

Enhancements
 * Process IDs are now logged in the logs for pfcmd and pfcmd_vlan
 * We now strip all non-digits in telephone numbers during SMS activation
 * Improved validation of violation triggers

Bug Fixes
 * MySQL pf user not having execute privileges (#1282)
 * Error when doing nodeaccounting view all (#1280)
 * Error when using installer.pl on CentOS 6 (#1274)