@@ -12,7 +12,9 @@ Handles captive-portal authentication, /status, de-registration, multiple regist
 use CGI::Carp qw( fatalsToBrowser );
 use CGI;
 use CGI::Session;
+use HTML::Entities qw(decode_entities);
 use Log::Log4perl;
+use URI::Escape qw(uri_escape uri_unescape);
 use strict;
 use warnings;
 
@@ -38,8 +40,7 @@ my $session = new CGI::Session(undef, $cgi, {Directory=>'/tmp'});
 
 my $ip              = pf::web::get_client_ip($cgi);
 my $mac             = ip2mac($ip);
-my $destination_url = $cgi->param("destination_url");
-
+my $destination_url = decode_entities(uri_unescape($cgi->param("destination_url")));
 $destination_url = $Config{'trapping'}{'redirecturl'} if (!$destination_url);
 
 if (!valid_mac($mac)) {
@@ -99,14 +100,14 @@ if (defined($params{'username'}) && $params{'username'} ne '') {
     if ($cgi->https()) {  
       print $cgi->redirect(
         "http://".$Config{'general'}{'hostname'}.".".$Config{'general'}{'domain'}
-        ."/access?destination_url=$destination_url"
+        .'/access?destination_url=' . uri_escape($destination_url)
       );
     } else {
       pf::web::generate_release_page($cgi, $session, $destination_url, $mac);
     }
     exit(0);
   } else {
-    print $cgi->redirect("/captive-portal?destination_url=$destination_url");
+    print $cgi->redirect('/captive-portal?destination_url=' . uri_escape($destination_url));
     $logger->info("more violations yet to come for $mac");
   }
 
@@ -151,7 +152,7 @@ if (defined($params{'username'}) && $params{'username'} ne '') {
   if ($cgi->https()) {
     print $cgi->redirect(
       "http://".$Config{'general'}{'hostname'}.".".$Config{'general'}{'domain'}
-      ."/access?destination_url=$destination_url"
+      .'/access?destination_url=' . uri_escape($destination_url)
     );
   } else {
     pf::web::generate_release_page($cgi, $session, $destination_url, $mac);
