@@ -108,7 +108,7 @@ sub generate_release_page {
     my $vars = {
         logo            => $Config{'general'}{'logo'},
         timer           => $Config{'trapping'}{'redirtimer'},
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         redirect_url => $Config{'trapping'}{'redirecturl'},
         i18n => \&i18n,
         initial_delay => $CAPTIVE_PORTAL{'NET_DETECT_INITIAL_DELAY'},
@@ -151,7 +151,7 @@ sub generate_scan_start_page {
     my $vars = {
         logo            => $Config{'general'}{'logo'},
         timer           => $Config{'scan'}{'duration'},
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         i18n => \&i18n,
         txt_message     => sprintf(
             i18n("system scan in progress"),
@@ -185,7 +185,7 @@ sub generate_login_page {
     my $vars = {
         i18n            => \&i18n,
         logo            => $Config{'general'}{'logo'},
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         list_help_info  => [
             { name => i18n('IP'),  value => $ip },
             { name => i18n('MAC'), value => $mac }
@@ -225,7 +225,7 @@ sub generate_enabler_page {
     textdomain("packetfence");
     my $vars = {
         logo            => $Config{'general'}{'logo'},
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         violation_id    => $violation_id,
         enable_text     => $enable_text,
         i18n            => \&i18n
@@ -247,7 +247,7 @@ sub generate_redirect_page {
     my $vars = {
         logo            => $Config{'general'}{'logo'},
         violation_url   => $violation_url,
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         i18n            => \&i18n,
     };
 
@@ -303,7 +303,7 @@ sub generate_scan_status_page {
         i18n             => \&i18n,
         txt_message      => sprintf(i18n('scan in progress contact support if too long'), $scan_start_time),
         txt_auto_refresh => sprintf(i18n('automatically refresh'), $refresh_timer),
-        destination_url  => $destination_url,
+        destination_url  => encode_entities($destination_url),
         refresh_timer    => $refresh_timer,
         list_help_info  => [
             { name => i18n('IP'),  value => $ip },
@@ -559,7 +559,7 @@ sub generate_registration_page {
     my $vars = {
         logo            => $Config{'general'}{'logo'},
         deadline        => $Config{'registration'}{'skip_deadline'},
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         i18n            => \&i18n,
         list_help_info  => [
             { name => i18n('IP'),  value => $ip },
@@ -612,7 +612,7 @@ sub generate_pending_page {
             { name => i18n('IP'),  value => $ip },
             { name => i18n('MAC'), value => $mac }
         ],
-        destination_url => $destination_url,
+        destination_url => encode_entities($destination_url),
         redirect_url => $Config{'trapping'}{'redirecturl'},
         initial_delay => $CAPTIVE_PORTAL{'NET_DETECT_PENDING_INITIAL_DELAY'},
         retry_delay => $CAPTIVE_PORTAL{'NET_DETECT_PENDING_RETRY_DELAY'},
