@@ -21,6 +21,7 @@ SECURITY
  * LDAP Injection in Web Admin login (Reported by Matthew Daley, #1293)
  * Shared session state between Captive Portal and Web Admin (Reported by Matthew Daley, #1294)
  * Command injection in guest handling in the Captive Portal and Web Admin (Reported by Matthew Daley, #1295)
+ * Cross-site scripting (XSS) in Captive Portal (Reported by Matthew Daley, #1296)
 
 New Hardware Support
  * Trapeze Wireless Controllers
